--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <head lang="en">
     <meta charset="utf-8">
-    <title>XKCD password</title>
+    <title>NSFW password</title>
     <meta name="description" content="A simple XKCD style password generator">
     <meta name="keywords" content="xkcd password,password,password generator,xkcd password generator">
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.0/css/bootstrap-combined.min.css" rel="stylesheet">
@@ -20,8 +20,8 @@
   <body>
   <div id="container">
   <h1>XKCD password generator</h1>
-  <p class="help">Generate XKCD passwords that are easy to remember and hard to guess. <p>
-  <a href="https://github.com/torbjokv/xkcdpassword.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+  <p class="help">Generate XKCD passwords that are easy to remember and hard to share. <p>
+  <a href="https://github.com/bradmkjr/nsfwpassword.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
   <table>
     <tr>
       <td>Separator</td>
@@ -53,16 +53,6 @@
     </div>
   </div>
   <footer class="help">This is an unofficial webpage inspired by <a href="http://xkcd.com/936/">XKCD</a> </footer>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-41938036-1', 'xkcdpassword.com');
-  ga('send', 'pageview');
-
-	</script>
   </body>
 
 </html>
